// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarms-list-row Renders \`alarms-list-row\` with bookmarked alarm 1`] = `
<tr
  class="alarm-list-row"
>
  <td
    class="alarm-list-row__icons pr-0"
  >
    <div
      class="layout align-center justify-space-between"
    >
      <div
        class="layout alarm-list-row__checkbox"
      >
        <!---->
      </div>
      <!---->
      <div
        class="layout align-center"
      >
        <alarms-list-row-bookmark-icon-stub />
      </div>
      <!---->
    </div>
  </td>
  <td
    class="alarm-list-row__cell"
  >
    <actions-panel-stub
      item="[object Object]"
      refreshalarmslist="[Function]"
      widget="[object Object]"
    />
    <!---->
  </td>
</tr>
`;

exports[`alarms-list-row Renders \`alarms-list-row\` with custom props 1`] = `
<tr
  class="alarm-list-row"
>
  <td
    class="alarm-list-row__icons pr-0"
  >
    <div
      class="layout align-center justify-space-between"
    >
      <div
        class="layout alarm-list-row__checkbox"
      >
        <div
          class="ma-0 v-simple-checkbox"
          hide-details=""
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light primary--text"
            >
              check_box
            </i>
            <div
              class="v-input--selection-controls__ripple primary--text"
            />
          </div>
        </div>
      </div>
      <!---->
      <!---->
      <alarms-expand-panel-btn-stub
        alarm="[object Object]"
        search=""
        widget="[object Object]"
      />
    </div>
  </td>
  <td
    class="alarm-list-row__cell"
  >
    <alarm-column-value-stub
      alarm="[object Object]"
      column="[object Object]"
      selectedtag="tag"
      widget="[object Object]"
    />
    <!---->
  </td>
  <td
    class="alarm-list-row__cell"
  >
    <alarm-column-value-stub
      alarm="[object Object]"
      column="[object Object]"
      selectedtag="tag"
      widget="[object Object]"
    />
    <!---->
  </td>
  <td
    class="alarm-list-row__cell"
  >
    <actions-panel-stub
      item="[object Object]"
      refreshalarmslist="[Function]"
      widget="[object Object]"
    />
    <!---->
  </td>
</tr>
`;

exports[`alarms-list-row Renders \`alarms-list-row\` with default and required props 1`] = `
<tr
  class="alarm-list-row"
>
  <!---->
  <td
    class="alarm-list-row__cell"
  >
    <alarm-column-value-stub
      alarm="[object Object]"
      column="[object Object]"
      selectedtag=""
      widget="[object Object]"
    />
    <!---->
  </td>
  <td
    class="alarm-list-row__cell"
  >
    <alarm-column-value-stub
      alarm="[object Object]"
      column="[object Object]"
      selectedtag=""
      widget="[object Object]"
    />
    <!---->
  </td>
  <td
    class="alarm-list-row__cell"
  >
    <actions-panel-stub
      item="[object Object]"
      refreshalarmslist="[Function]"
      widget="[object Object]"
    />
    <!---->
  </td>
</tr>
`;

exports[`alarms-list-row Renders \`alarms-list-row\` with expand button 1`] = `
<tr
  class="alarm-list-row"
>
  <td
    class="alarm-list-row__icons pr-0"
  >
    <div
      class="layout align-center justify-space-between"
    >
      <div
        class="layout alarm-list-row__checkbox"
      >
        <!---->
      </div>
      <!---->
      <!---->
      <alarms-expand-panel-btn-stub
        alarm="[object Object]"
        search=""
        widget="[object Object]"
      />
    </div>
  </td>
  <td
    class="alarm-list-row__cell"
  >
    <actions-panel-stub
      item="[object Object]"
      refreshalarmslist="[Function]"
      widget="[object Object]"
    />
    <!---->
  </td>
</tr>
`;

exports[`alarms-list-row Renders \`alarms-list-row\` with feature classes 1`] = `
<tr
  class="alarm-list-row class-2"
>
  <td
    class="alarm-list-row__icons pr-0"
  >
    <div
      class="layout align-center justify-space-between"
    >
      <div
        class="layout alarm-list-row__checkbox"
      >
        <!---->
      </div>
      <!---->
      <!---->
      <!---->
    </div>
  </td>
  <td
    class="alarm-list-row__cell"
  >
    <actions-panel-stub
      item="[object Object]"
      refreshalarmslist="[Function]"
      widget="[object Object]"
    />
    <!---->
  </td>
</tr>
`;

exports[`alarms-list-row Renders \`alarms-list-row\` with filtered children in parent alarm 1`] = `
<tr
  class="alarm-list-row"
>
  <td
    class="alarm-list-row__icons pr-0"
  >
    <div
      class="layout align-center justify-space-between"
    >
      <div
        class="layout alarm-list-row__checkbox"
      >
        <!---->
      </div>
      <div
        class="layout align-center"
      >
        <alarms-list-row-instructions-icon-stub
          alarm="[object Object]"
        />
      </div>
      <!---->
      <!---->
    </div>
  </td>
  <td
    class="alarm-list-row__cell"
  >
    <actions-panel-stub
      item="[object Object]"
      parentalarm="[object Object]"
      refreshalarmslist="[Function]"
      widget="[object Object]"
    />
    <!---->
  </td>
</tr>
`;

exports[`alarms-list-row Renders \`alarms-list-row\` with instructions 1`] = `
<tr
  class="alarm-list-row"
>
  <!---->
  <td
    class="alarm-list-row__cell"
  >
    <actions-panel-stub
      item="[object Object]"
      parentalarm="[object Object]"
      refreshalarmslist="[Function]"
      widget="[object Object]"
    />
    <!---->
  </td>
</tr>
`;

exports[`alarms-list-row Renders \`alarms-list-row\` with resolved alarm 1`] = `
<tr
  class="alarm-list-row"
>
  <td
    class="alarm-list-row__icons pr-0"
  >
    <div
      class="layout align-center justify-space-between"
    >
      <div
        class="layout alarm-list-row__checkbox"
      >
        <div
          class="v-simple-checkbox v-simple-checkbox--disabled"
          hide-details=""
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate v-icon--disabled material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <!---->
      <!---->
      <!---->
    </div>
  </td>
  <td
    class="alarm-list-row__cell"
  >
    <actions-panel-stub
      item="[object Object]"
      refreshalarmslist="[Function]"
      widget="[object Object]"
    />
    <!---->
  </td>
</tr>
`;
